# rand

./: .gitignore  CHANGELOG.md  Cargo.toml  search-index.js  simd rand.sublime-project  simd rand.sublime-workspace  simd_rand.sublime-workspace
benches/: box_muller.rs  distributions.rs  gen_range.rs  generators.rs  misc.rs  simd_uniform_int.rs  uniform.rs
rand/: enum.ErrorKind.html  fn.sample.html  fn.weak_rng.html  index.html  sidebar-items.js  struct.AsciiGenerator.html  struct.EntropyRng.html  struct.Generator.html  struct.ReseedingRng.html  struct.SmallRng.html  struct.StdRng.html  struct.ThreadRng.html  trait.AsByteSliceMut.html  trait.BlockRngCore.html  trait.CryptoRng.html  trait.NewRng.html  trait.Rand.html  trait.Rng.html  trait.RngCore.html  trait.SeedableRng.html
rand/distributions/: index.html  struct.Alphanumeric.html  struct.DistIter.html  struct.Standard.html  struct.Weighted.html  struct.WeightedChoice.html  trait.Distribution.html  trait.IndependentSample.html  trait.Sample.html
rand_core/: CHANGELOG.md  Cargo.toml  enum.ErrorKind.html  index.html  trait.BlockRngCore.html  trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
rand_core/impls/: fn.fill_bytes_via_u32.html  fn.fill_bytes_via_u64.html  fn.fill_via_u32_chunks.html  fn.fill_via_u64_chunks.html  fn.next_u32_via_fill.html  fn.next_u64_via_fill.html  fn.next_u64_via_u32.html  index.html  sidebar-items.js  struct.BlockRng.html  struct.BlockRng64.html
rand_core/src/: lib.rs  simd_impls.rs  utils.rs
src/: lib.rs  seq.rs  simd_shuffle.rs
tests/: bool.rs  distr_normal.rs
(+66 files in other folders)
