[package]
name = "rand_core"
version = "0.2.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/rand"
documentation = "https://docs.rs/rand_core"
homepage = "https://crates.io/crates/rand_core"
description = """
Core random number generator traits and tools for implementation.
"""
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-lang-nursery/rand" }
appveyor = { repository = "alexcrichton/rand" }

[features]
default = ["std", "simd_support"]
std = ["alloc"]    # use std library; should be default but for above bug
alloc = []  # enables Vec and Box support without std
serde1 = ["serde", "serde_derive"] # enables serde for BlockRng wrapper
simd_support = ["packed_simd"] # enables SIMD support

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "^1.0.38", optional = true }
# stdsimd = { git = "https://github.com/rust-lang-nursery/stdsimd" }
# packed_simd = { git = "https://github.com/gnzlbg/packed_simd", features = ["into_bits"] }
# packed_simd = { path = "/Users/daniel/Documents/GitHub/packed_simd", features = ["into_bits"] }
packed_simd = { version = "0.1", optional = true, features = ["into_bits"] }
